--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@
             <!-- <div>
                 <img class="sublime_img" src="dist/img/sublime.png" alt="">
             </div> -->
-        </div>
-
-        <div class="container">
             <img class="sublime_img" src="dist/img/sublime.png" alt="">
         </div>
-    </div>
+
+        <!-- <div class="container">
+            <img class="sublime_img" src="dist/img/sublime.png" alt="">
+        </div>-->
+    </div> 
     <!--end of what_you_get_block-->
 
     <div class="feedbackBlock">
@@ -117,7 +118,7 @@
                         </p>
                     </div>
                     <p class="user__feedback"><a href="">@Pixelbuddha</a> Suspendisse sodales sem est, in
-                        scelerisque felis scelerisque in. Aenean faucibus mollis risus. Praesent sit amet erat eget
+                        scelerisque felis scelerisque into. Aenean faucibus mollis risus. Praesent sit d amet erat eget
                         eros.</p>
                     <p class="counter"><span>2</span> hours ago</p>
                 </div>
@@ -130,7 +131,7 @@
                         </p>
                     </div>
                     <p class="user__feedback"><a href="">@Pixelbuddha</a> Suspendisse sodales sem est, in scelerisque
-                        felis scelerisque in. Aenean faucibus mollis risus. Praesent sit amet erat eget eros.</p>
+                        felis scelerisque into. Aenean faucibus mollis risus. Praesent sit amet erat eget eros.</p>
                     <p class="counter"><span>2</span> hours ago</p>
                 </div>
 
@@ -141,7 +142,7 @@
                             <a class="user__nickname" href="#">@DoctorS</a>
                         </p>
                     </div>
-                    <p class="user__feedback"><a href="">@Pixelbuddha</a> Suspendisse sodales sem est, in scelerisque
+                    <p class="user__feedback"><a href="">@Pixelbuddha</a> Suspendisse eb sodales sem est, in scelerisque
                         felis scelerisque in. Aenean faucibus mollis risus. Praesentss sit amet erat eget eros.</p>
                     <p class="counter"><span>2</span> hours ago</p>
                 </div>
@@ -174,7 +175,6 @@
                     <div class="counter"><span>25 427</span> Subscribers</div>
                 </div>
 
-
             </div>
         </div>
     </div>
@@ -200,15 +200,13 @@
         </div>
     </div>
 
-
     <footer>
         <div class="container">
             <div class="footer">
                 <div class="footer-div">
                     <img class="footer-div__defaultLogo" src="dist/img/footer_logo.png" alt="">
                     <img class="footer-div__shortLogo" src="dist/img/footer_logo_short.png" alt="">
-                    <p class="footer-div__text">Lorem ipsum dolor sit amet, feugiat delicat liberavisse id cum no
-                        quo.</p>
+                    <p class="footer-div__text">Lorem ipsum dolor sit amet, feugiat delicat liberavisse id cum no ruo.</p>
                 </div>
                 <div class="footer-div footer-div__ul">
                     <h3 class="footer-div__header">Navigation</h3>
@@ -240,8 +238,8 @@
 
 
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
     <!-- <script type="text/javascript" src="dist/js/slick.min.js"></script> -->
     <script type="text/javascript" src="dist/js/main.min.js"></script>
